--- a/kubernetes-manifests/frontend.yaml
+++ b/kubernetes-manifests/frontend.yaml
@@ -84,8 +84,12 @@ spec:
             value: "shoppingassistantservice:80"
           # # ENV_PLATFORM: One of: local, gcp, aws, azure, onprem, alibaba
           # # When not set, defaults to "local" unless running in GKE, otherwies auto-sets to gcp
-          # - name: ENV_PLATFORM
-          #   value: "aws"
+          - name: ENV_PLATFORM
+            value: "aws"
+          - name: COLLECTOR_SERVICE_ADDR
+            value: "grafana-k8s-monitoring-alloy.monitoring.svc.cluster.local:4317"
+          - name: ENABLE_TRACING
+            value: "1"
           - name: ENABLE_PROFILER
             value: "0"
           # - name: CYMBAL_BRANDING
