--- a/kubernetes-manifests/paymentservice.yaml
+++ b/kubernetes-manifests/paymentservice.yaml
@@ -49,6 +49,10 @@ spec:
         env:
         - name: PORT
           value: "50051"
+        - name: COLLECTOR_SERVICE_ADDR
+          value: "grafana-k8s-monitoring-alloy.monitoring.svc.cluster.local:4318"
+        - name: ENABLE_TRACING
+          value: "1"
         - name: DISABLE_PROFILER
           value: "1"
         readinessProbe:
