--- a/kubernetes-manifests/shippingservice.yaml
+++ b/kubernetes-manifests/shippingservice.yaml
@@ -48,6 +48,8 @@ spec:
         env:
         - name: PORT
           value: "50051"
+        - name: DISABLE_TRACING
+          value: ""
         - name: DISABLE_PROFILER
           value: "1"
         readinessProbe:
